--- a/mosun/app/build.gradle
+++ b/mosun/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.google.android.material:material:1.0.0'
+    implementation files('libs\\libDaumMapAndroid.jar')
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -68,6 +69,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0' // url 이미지 가져오기
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //qr코드 생성
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
+    //카카오 맵
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
 
 }
