--- a/mosun/app/src/main/AndroidManifest.xml
+++ b/mosun/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.test.mosun">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".login.GlobalApplication"
@@ -12,13 +14,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".qrcode.qrPopupActivity"></activity>
-        <activity android:name=".qrcode.qrPopUp" />
-        <activity android:name=".qrcode.MainActivity" />
+
+
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
+
+
+
+        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation"/>
+        <activity android:name=".qrcode.ScanQR"></activity>
+        <activity android:name=".qrcode.CreateQR" />
+
+        <activity android:name=".qrcode.QRPopupActivity"
+            android:theme="@style/PopUpTheme"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".activity.CourseActivity" />
+        <activity android:name=".activity.AreaActivity" />
+
+
 
         <activity android:name=".login.LoginActivity">
             <intent-filter>
@@ -27,9 +44,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".activity.CourseActivity" />
-        <activity android:name=".activity.AreaActivity" />
+
     </application>
 
 </manifest>
