--- a/mosun/app/src/main/AndroidManifest.xml
+++ b/mosun/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.test.mosun">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".login.GlobalApplication"
@@ -16,27 +16,30 @@
         android:theme="@style/AppTheme">
 
 
-
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
 
-
-
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        <!--qr코드 액티비티-->
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation"/>
-        <activity android:name=".qrcode.ScanQR"></activity>
+            tools:replace="screenOrientation" />
+        <activity android:name=".qrcode.ScanQR" />
         <activity android:name=".qrcode.CreateQR" />
+        <activity
+            android:name=".qrcode.QRPopupActivity"
+            android:theme="@style/PopUpTheme" />
 
-        <activity android:name=".qrcode.QRPopupActivity"
+        <!--홈 액티비티-->
+        <activity android:name=".CoursePopupActivity"
             android:theme="@style/PopUpTheme"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".activity.CourseActivity" />
         <activity android:name=".activity.AreaActivity" />
 
 
-
+        <!--로그인 액티비티-->
         <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +47,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
