--- a/front/app/build.gradle
+++ b/front/app/build.gradle
@@ -12,6 +12,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // 텐서플로우 라이트 추가부분
+        ndk{
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
+
     }
 
     buildTypes {
@@ -36,4 +42,7 @@ dependencies {
     //Libraris qr코드
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation 'com.karumi:dexter:5.0.0'
+
+    // 텐서플로우 라이트 추가 부분
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
 }
