--- a/mosun/app/src/main/AndroidManifest.xml
+++ b/mosun/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".stamp.DetailPopUpActivity"></activity>
+        <activity android:name=".qrcode.QRNetworkActivity"></activity>
+        <activity android:name=".stamp.DetailPopUpActivity" />
         <activity android:name=".stamp.CourseSelectionActivity" />
 
         <meta-data
