[update] 카카오 로그인 연결로직 변경, 로딩 액티비티 생성

--- a/mosun/app/build.gradle
+++ b/mosun/app/build.gradle
@@ -76,4 +76,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
 
+    //google map
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    //ted permission
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
