--- a/mosun/app/src/main/AndroidManifest.xml
+++ b/mosun/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.test.mosun">
     <!-- 권한추가 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- camera 접근권한 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" /> <!-- 카메라 -->
@@ -27,6 +27,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDew9HN_8A_6EHs0faCJHsjgfkjjevjek4" /> <!-- 구글맵 api -->
+
+
         <activity android:name=".loading.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
