--- a/helloworld/app/src/main/AndroidManifest.xml
+++ b/helloworld/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.test.mosun">
     <!-- 권한추가 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -61,6 +62,7 @@
         <activity android:name=".stamp.CourseSelectionActivity" />
         <activity android:name=".login.LoginActivity"/>
         <activity android:name=".camera.CameraActivity"/>
+        <activity android:name=".network.NetworkActivity"/>
     </application>
 
 </manifest>
